# psilo-habilis

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  package.json  pnpm-lock.yaml
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-ai-researcher.md  gsd-debugger.md  (+13 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
apps/worker-gateway/: Dockerfile  alembic.ini  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
apps/worker-gateway/alembic/: env.py
apps/worker-gateway/alembic/versions/: 001_create_core_tables.py  002_seed_psilodigital.py  003_connector_credentials.py
apps/worker-gateway/gateway/: __init__.py  config.py  logging.py  models.py  prompt.py  resolver.py  response_parser.py
apps/worker-gateway/gateway/adapters/: __init__.py  agentzero.py  base.py  stub.py
apps/worker-gateway/gateway/connectors/: session.py
apps/worker-gateway/gateway/paperclip/: __init__.py  auth.py  client.py  models.py
apps/worker-gateway/gateway/store/: __init__.py  base.py  connector_store.py  db_store.py  file_store.py  run_store.py
apps/worker-gateway/tests/: conftest.py  test_adapters.py  test_agentzero_integration.py  test_connectors.py  test_paperclip_client.py  test_prompt.py  test_resolver.py  test_response_parser.py  test_routes.py
docs/: coolify.md  decisions.md  local-dev.md  mission.md  tasks.md
scripts/: setup.sh  smoke-test.sh
worker-gateway/: app.py  requirements.txt
(+168 files in other folders)
