[project]
name = "worker-gateway"
version = "1.0.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = ["integration: requires running Agent Zero + LiteLLM stack"]
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py312"
line-length = 100
